# gamepigeon-hax

./: .gitignore  Makefile
cpp/: Makefile  README.md
cpp/include/: Colors.hpp  board.hpp
cpp/src/: board.cpp  timeout.cpp
include/: Colors.hpp  Constants.hpp  GameState.hpp  negamax.hpp  timeout.hpp
python/gamepigeon-learner/: pyproject.toml
python/gamepigeon-learner/gamepigeon_learner/: cli.py
src/: Colors.cpp  GameState.cpp  main.cpp  negamax.cpp
