[tool.poetry]
name = "gamepigeon-learner"
version = "0.1.0"
description = ""
authors = ["Noah Crocker <vertigoetrex@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "gamepigeon_learner.cli:main"